--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/people.svg"/>
+                            <img src="img/people.svg"/; style="color: #34bcaa">
                             <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
                         </div>
                     </div>
@@ -215,7 +215,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/love-planet.svg"/>
+                            <img src="img/love-planet.svg"/; style="color: #34bcaa">
                             <h4 class="counter-title">Development funds</h4>
                         </div>
                     </div>
@@ -225,7 +225,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/heart-2.svg"/>
+                            <img src="img/heart-2.svg"/; style="color: #34bcaa">
                             <h4 class="counter-title">Active community with an online and real-world presence</h4>
                         </div>
                     </div>
@@ -235,7 +235,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                           <img src="img/pacifism.svg"/>
+                           <img src="img/pacifism.svg"/; style="color: #34bcaa">
                             <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
                         </div>
                     </div>
