--- a/about.html
+++ b/about.html
@@ -52,11 +52,6 @@
     text-decoration: none;
 }
 		
-		filter-gold  {
-			
-			filter: invert(90%) sepia(25%) saturate(3006%) hue-rotate(356deg) brightness(92%) contrast(88%);
-			
-			{
 	
 	</style>
 
@@ -211,7 +206,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/people.svg"/; class="filter-gold">
+                            <img src="img/people.svg"/>
                             <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
                         </div>
                     </div>
@@ -221,7 +216,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/love-planet.svg"/; class="filter-gold">
+                            <img src="img/love-planet.svg"/>
                             <h4 class="counter-title">Development funds</h4>
                         </div>
                     </div>
@@ -231,7 +226,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/heart-2.svg"/; class="filter-gold">
+                            <img src="img/heart-2.svg"/>
                             <h4 class="counter-title">Active community with an online and real-world presence</h4>
                         </div>
                     </div>
@@ -241,7 +236,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                           <img src="img/pacifism.svg"/; class="filter-gold">
+                           <img src="img/pacifism.svg"/>
                             <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
                         </div>
                     </div>
