--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/people.svg"/>
+                            <img src="img/people.png"/>
                             <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
                         </div>
                     </div>
@@ -216,7 +216,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/love-planet.svg"/>
+                            <img src="img/love-planet.png"/>
                             <h4 class="counter-title">Development funds</h4>
                         </div>
                     </div>
@@ -226,7 +226,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/heart-2.svg"/>
+                            <img src="img/heart-2.png"/>
                             <h4 class="counter-title">Active community with an online and real-world presence</h4>
                         </div>
                     </div>
@@ -236,7 +236,7 @@ not only hold governments but yourself accountable for ensuring a better
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                           <img src="img/pacifism.svg"/>
+                           <img src="img/pacifism.png"/>
                             <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
                         </div>
                     </div>
