--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                 <div class="content-column col xs-12">
                     <div class="sec-title">
                         <span class="title"></span>
-                        <h2><span>About Us</span></h2>
+                       <h2 style="text-align: center"><span style=" color: #debf12">About Us</span></h2>
                         <div class="separator-two"></div>
                     </div>
                     <div class="inner-box">
@@ -162,7 +162,7 @@ homeless.</p>
                 <div class="inner-column">
                     <div class="sec-title">
                         <span class="title"></span>
-                        <h2><span>Our Mantra Is</span></h2>
+                        <h2 style="text-align: center"><span style=" color: #debf12">Our Mantra</span></h2>
                         <div class="separator"></div>
                     </div>
                     <div class="text">
@@ -193,7 +193,7 @@ not only hold governments but yourself accountable for ensuring a better
 <section class="causes-section" id="features">
     <div class="auto-container">
         <div class="sec-title text-center">
-            <h2><span>Features</span></h2>
+            <h2 style="text-align: center"><span style=" color: #debf12">Features</span></h2>
             <div class="separator-two"></div>
         </div>
 
