--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
     font-size: 23px;
     line-height: 1.42857143;
     color: #34bcaa;
+    padding-left: 50px;
     background-color: #000;
 }
 		a {
