--- a/about.html
+++ b/about.html
@@ -125,6 +125,7 @@
 
 <!-- About Section-->
 <section class="about-section">
+   <img src="img/homeless3.png">
     <div class="auto-container">
         <div class="row clearfix">
             <!--Content Column-->
