--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
 </head>
 <body>
+	
+	<style>
+		
+		body {
+    
+      background-color: #000;
+			
+}
+	</style>
 
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
