--- a/index.html
+++ b/index.html
@@ -111,10 +111,11 @@
 </section> -->
 		    
 		    <!-- Work Section -->
+		    <h2 style="text-align: center"><font style="color: #debf12">Downloads</font></h2>
 <section class="work-section style-two alternate">
     <div class="auto-container">
         <!-- Work Steps -->
-        <div class="steps-outer">
+		 <div class="steps-outer">
             <div class="row clearfix">
                 <!-- Step -->
                 <div class="work-step col-md-4 col-sm-6 col-xs-12">
