--- a/charity.html
+++ b/charity.html
@@ -31,6 +31,15 @@
   <title>https://devilking6105.github.io/hthcoin/</title>
 <body bgcolor="#000">
 
+
+<script>
+
+
+.navbar-inverse .navbar-nav>li>a { color: #debf12; background: #000; }.navbar-nav>li>a { padding-top: 15px; padding-bottom: 15px; padding-left: 78px;}.navbar-inverse .navbar-brand { color: #debf12; background: #000;}.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form { border-color: #000; background: #000;}.container-fluid { padding-right: 0px; padding-left: 15px; margin-right: auto; margin-left: auto; background: #000;}
+
+</script>
+
+
 <!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
