--- a/partners.html
+++ b/partners.html
@@ -38,6 +38,12 @@
 
 </head>
 <body>
+	
+	<style>
+
+.navbar-inverse .navbar-nav>li>a { color: #debf12; background: #000; }.navbar-nav>li>a { padding-top: 15px; padding-bottom: 15px; padding-left: 78px;}.navbar-inverse .navbar-brand { color: #debf12; background: #000;}.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form { border-color: #000; background: #000;}.container-fluid { padding-right: 0px; padding-left: 15px; margin-right: auto; margin-left: auto; background: #000;}
+
+</style>
 
 	<!-- Nav Bar -->
 <nav class="navbar navbar-inverse">
