--- a/resources.html
+++ b/resources.html
@@ -25,6 +25,11 @@
     list-style-type: none;
 }
 		
+	
+
+.navbar-inverse .navbar-nav>li>a { color: #debf12; background: #000; }.navbar-nav>li>a { padding-top: 15px; padding-bottom: 15px; padding-left: 78px;}.navbar-inverse .navbar-brand { color: #debf12; background: #000;}.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form { border-color: #000; background: #000;}.container-fluid { padding-right: 0px; padding-left: 15px; margin-right: auto; margin-left: auto; background: #000;}
+
+		
 	</style>
 
 	<!-- Nav Bar -->
