--- a/resources.html
+++ b/resources.html
@@ -25,7 +25,23 @@
     list-style-type: none;
 }
 		
-	
+	.navbar-nav>li>.dropdown-menu {
+    margin-top: 0;
+    border-top-left-radius: 0;
+    background: #000;
+    border-top-right-radius: 0;
+}
+
+.dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #34bcaa;
+    white-space: nowrap;
+    background: #000;
+}
 
 .navbar-inverse .navbar-nav>li>a { color: #debf12; background: #000; }.navbar-nav>li>a { padding-top: 15px; padding-bottom: 15px; padding-left: 78px;}.navbar-inverse .navbar-brand { color: #debf12; background: #000;}.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form { border-color: #000; background: #000;}.container-fluid { padding-right: 0px; padding-left: 15px; margin-right: auto; margin-left: auto; background: #000;}
 
