--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
     margin-left: auto;
     background: #000;
 }
+		
+		.navbar-nav>li>.dropdown-menu {
+    margin-top: 0;
+    border-top-left-radius: 0;
+    background: #000;
+    border-top-right-radius: 0;
+}
+
+.dropdown-menu>li>a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #34bcaa;
+    white-space: nowrap;
+    background: #000;
+}
 	</style>
 
 	<!-- Nav Bar -->
