--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     color: #34bcaa;
     white-space: nowrap;
     background: #000;
+	.dropdown-menu a:hover {background-color: red;}
+
 }
 	</style>
 
