--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 .navbar-inverse .navbar-nav>li>a {
     color: #debf12;
     background: #000;
+    nav>li>a:hover {
+    color: red;
+    background-color: red;
+}	
         
 }
 
