--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 78px;
-	 nav>li>a:hover {
+	
+}
+		
+ .nav>li>a:hover {
     color: red;
     background-color: red;
 }	
-}
 
 .navbar-inverse .navbar-brand {
     color: #debf12;
