--- a/FAQ.html
+++ b/FAQ.html
@@ -47,6 +47,9 @@
     color: #333;
     background-color: #000;
 }
+				.nav.navbar-nav li a:hover {
+  color: #34bcaa;
+}
 	
 		.navbar-nav>li>.dropdown-menu {
     margin-top: 0;
