--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,9 @@
     background: #000;
     border-top-right-radius: 0;
 }
+			.nav.navbar-nav li a:hover {
+  color: #34bcaa;
+}
 
 .dropdown-menu>li>a {
     display: block;
