--- a/FAQ.html
+++ b/FAQ.html
@@ -66,7 +66,7 @@
     line-height: 1.42857143;
     color: #34bcaa;
     white-space: nowrap;
-    background: #000;
+    background: #000 !important;
 }
 		
 
