--- a/specifications.html
+++ b/specifications.html
@@ -56,7 +56,7 @@
     line-height: 1.42857143;
     color: #34bcaa;
     white-space: nowrap;
-    background: #000;
+    background: #000 !important;
 }
 		.nav.navbar-nav li a:hover {
   color: #34bcaa;
