--- a/charity.html
+++ b/charity.html
@@ -47,7 +47,7 @@
     clear: both;
     font-weight: 400;
     line-height: 1.42857143;
-    color: #34bcaa;
+    color: #debf12;
     white-space: nowrap;
     background: #000 !important;
 }
