--- a/partners.html
+++ b/partners.html
@@ -64,6 +64,10 @@
     white-space: nowrap;
     background: #000 !important;
 }
+		.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover {
+    color: #34bcaa;
+    background-color: transparent;
+}
 		
 </style>
 
