--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 		.nav.navbar-nav li a:hover {
   color: #34bcaa;
 }
+		.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover {
+    color: #34bcaa;
+    background-color: transparent;
+}
+		
 
 .navbar-inverse .navbar-brand {
     color: #debf12;
