--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,11 @@
   color: #34bcaa;
 }
 
+	.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover {
+    color: #34bcaa;
+    background-color: transparent;
+}
+	
 .dropdown-menu>li>a {
     display: block;
     padding: 3px 20px;
