--- a/FAQ.html
+++ b/FAQ.html
@@ -51,6 +51,11 @@
   color: #34bcaa;
 }
 	
+		.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover {
+    color: #34bcaa;
+    background-color: transparent;
+}
+		
 		.navbar-nav>li>.dropdown-menu {
     margin-top: 0;
     border-top-left-radius: 0;
