--- a/team.html
+++ b/team.html
@@ -49,7 +49,7 @@
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
-    color: #333;
+    color: #debf12;
     background-color: #000;
 }
 		
