--- a/team.html
+++ b/team.html
@@ -85,6 +85,10 @@
     margin-right: -500px;
     margin-left: -120px;
 }
+		a {
+    color: #34bcaa;
+    text-decoration: none;
+}
 		
 </style>
 	
