--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
     background: #000 !important;
 
 }
+				img {
+    vertical-align: middle;
+    height: 150px;
+}
+		
 	</style>
 
 	<!-- Nav Bar -->
