--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     background: #000 !important;
 
 }
-				img {
+				img1 {
     vertical-align: middle;
     height: 150px;
 }
@@ -199,7 +199,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/people.png"/>
+                            <img1 src="img/people.png"/>
                             <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
                         </div>
                     </div>
@@ -209,7 +209,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/love-planet.png"/>
+                            <img1 src="img/love-planet.png"/>
                             <h4 class="counter-title">Development funds</h4>
                         </div>
                     </div>
@@ -219,7 +219,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/heart-2.png"/>
+                            <img1 src="img/heart-2.png"/>
                             <h4 class="counter-title">Active community with an online and real-world presence</h4>
                         </div>
                     </div>
@@ -229,7 +229,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                           <img src="img/pacifism.png"/>
+                           <img1 src="img/pacifism.png"/>
                             <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
                         </div>
                     </div>
