--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/people.png"/>
+                            <img src="img/people.png"/ style="height: 150px">
                             <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
                         </div>
                     </div>
@@ -210,7 +210,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/love-planet.png"/>
+                            <img src="img/love-planet.png"/ style="height: 150px">
                             <h4 class="counter-title">Development funds</h4>
                         </div>
                     </div>
@@ -220,7 +220,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                            <img src="img/heart-2.png"/>
+                            <img src="img/heart-2.png"/ style="height: 150px">
                             <h4 class="counter-title">Active community with an online and real-world presence</h4>
                         </div>
                     </div>
@@ -230,7 +230,7 @@ function carousel() {
                 <div class="counter-column col-md-3 col-sm-6 col-xs-12">
                     <div class="inner">
                         <div class="count-box">
-                           <img src="img/pacifism.png"/>
+                           <img src="img/pacifism.png"/ style="height: 150px">
                             <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
                         </div>
                     </div>
