--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ function carousel() {
                     <div class="inner">
                         <div class="count-box">
                             <img src="img/people.png"/ style="height: 150px">
-                            <h4 class="counter-title">Guaranteed charity fees directly from the blockchain</h4>
+                            <h4 class="counter-title"><font style="color: #34bcaa">Guaranteed charity fees directly from the blockchain</font></h4>
                         </div>
                     </div>
                 </div>
@@ -211,7 +211,7 @@ function carousel() {
                     <div class="inner">
                         <div class="count-box">
                             <img src="img/love-planet.png"/ style="height: 150px">
-                            <h4 class="counter-title">Development funds</h4>
+                            <h4 class="counter-title"><font style="color: #34bcaa>Development funds</font></h4>
                         </div>
                     </div>
                 </div>
@@ -221,7 +221,7 @@ function carousel() {
                     <div class="inner">
                         <div class="count-box">
                             <img src="img/heart-2.png"/ style="height: 150px">
-                            <h4 class="counter-title">Active community with an online and real-world presence</h4>
+                            <h4 class="counter-title"><font style="color: #34bcaa">Active community with an online and real-world presence</font></h4>
                         </div>
                     </div>
                 </div>
@@ -231,7 +231,7 @@ function carousel() {
                     <div class="inner">
                         <div class="count-box">
                            <img src="img/pacifism.png"/ style="height: 150px">
-                            <h4 class="counter-title">A dedicated and passionate team of founding members</h4>
+                            <h4 class="counter-title"><font style="color: #34bcaa">A dedicated and passionate team of founding members</font></h4>
                         </div>
                     </div>
                 </div>
