--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ function carousel() {
                     <div class="inner">
                         <div class="count-box">
                             <img src="img/love-planet.png"/ style="height: 150px">
-                            <h4 class="counter-title"><font style="color: #34bcaa>Development funds</font></h4>
+                            <h4 class="counter-title"><font style="color: #34bcaa">Development funds</font></h4>
                         </div>
                     </div>
                 </div>
