--- a/about.html
+++ b/about.html
@@ -82,6 +82,11 @@
     background: #000 !important;
 }
 		
+		.row {
+    margin-right: 250px;
+    margin-left: -1000px;
+}
+		
 	</style>
 
 	<!-- Nav Bar -->
