--- a/about.html
+++ b/about.html
@@ -52,9 +52,19 @@
     color: #debf12;
     text-decoration: none;
 }
+.navbar-inverse .navbar-nav>li>a {
+    color: #debf12;
+    background: #000;
+           
+}
+.navbar-nav>li>a {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 78px;
+	
+}
 		
-
-				.nav.navbar-nav li a:hover {
+		.nav.navbar-nav li a:hover {
   color: #34bcaa;
 }
 		.navbar-inverse .navbar-brand:focus, .navbar-inverse .navbar-brand:hover {
@@ -62,15 +72,28 @@
     background-color: transparent;
 }
 		
-.navbar-inverse .navbar-nav>li>a { color: #debf12; background: #000; }.navbar-nav>li>a { padding-top: 15px; padding-bottom: 15px; padding-left: 78px;}.navbar-inverse .navbar-brand { color: #debf12; background: #000;}.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form { border-color: #000; background: #000;}.container-fluid { padding-right: 0px; padding-left: 15px; margin-right: auto; margin-left: auto; background: #000;}
-	
+.navbar-inverse .navbar-brand {
+    color: #debf12;
+    background: #000;
+}
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+    border-color: #000;
+    background: #000;
+}
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    background: #000;
+}
+		
 		.navbar-nav>li>.dropdown-menu {
     margin-top: 0;
     border-top-left-radius: 0;
     background: #000;
     border-top-right-radius: 0;
 }
-
 .dropdown-menu>li>a {
     display: block;
     padding: 3px 20px;
